mitosheet: fix spacing of toolbar

--- a/mitosheet/css/toolbar.css
+++ b/mitosheet/css/toolbar.css
@@ -41,7 +41,7 @@
 .toolbar-dropdown-selector {
   height: 22px;
   margin-right: 5px !important; /* Needs to important due to margin overwrites by JLab rendering*/
-  padding: 2px 3px;
+  padding: 0px 3px;
   border-radius: 3px;
   font-family: Roboto;
   box-sizing: border-box;
